# google-health-api

./: .gitignore  README.md  main.py  pyproject.toml
demo/: README.md  auth.py  config.py  health_client.py  main.py
playground/: gemini_service.py  health_context.py  main.py  system_prompt.md
playground/static/: app.js  connect.html  index.html  styles.css
