[project]
name = "google-health-api"
version = "0.1.0"
description = "google health api playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]
